--- a/gallery.html
+++ b/gallery.html
@@ -1,8 +1,8 @@
 <!doctype html>
     <html lang="en">
     
-<!-- Mirrored from rtcug.org/gallery by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 29 Jan 2026 13:13:25 GMT -->
-<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+
+<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -66,113 +66,116 @@
        
    <div class="gallery big-padding container-fluid">
     <div class="container">
-        <div class="row">
-            <div class="col-md-4 mb-4">
+        <div class="row" id="gallery-row">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/Church_tank_2.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md img-fluid" src="assets/images/blog/Church_tank_2.jpg" alt="Dummy Image 1">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/Church_tank_4.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md img-fluid" src="assets/images/blog/Church_tank_4.jpg" alt="Dummy Image 2">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/church_tank.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md img-fluid" src="assets/images/blog/church_tank.jpg" alt="Dummy Image 3">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/Health_facility_tank.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md img-fluid" src="assets/images/blog/Health_facility_tank.jpg" alt="Dummy Image 4">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/Health_Facility_Tank2.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md img-fluid" src="assets/images/blog/Health_Facility_Tank2.jpg" alt="Dummy Image 5">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/Home_tank3.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md img-fluid" src="assets/images/blog/Home_tank3.jpg" alt="Dummy Image 6">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/Home_tank_construction.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md img-fluid" src="assets/images/blog/Home_tank_construction.jpg" alt="Dummy Image 7">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/home_tank1.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md img-fluid" src="assets/images/blog/home_tank1.jpg" alt="Water Tank">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/Water_Tank.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md img-fluid" src="assets/images/blog/Water_Tank.jpg" alt="Water Tank">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/blog_01.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_01.jpg" alt="Image 1">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/blog_02.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_02.jpg" alt="Image 2">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="1">
                 <a href="assets/images/blog/blog_03.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_03.jpg" alt="Image 3">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="2">
                 <a href="assets/images/blog/blog_04.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_04.jpg" alt="Image 4">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="2">
                 <a href="assets/images/blog/blog_05.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_05.jpg" alt="Image 5">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="2">
                 <a href="assets/images/blog/blog_06.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_06.jpg" alt="Image 6">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="2">
                 <a href="assets/images/blog/blog_07.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_07.jpg" alt="Image 7">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="2">
                 <a href="assets/images/blog/blog_08.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_08.jpg" alt="Image 8">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="2">
                 <a href="assets/images/blog/blog_09.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_09.jpg" alt="Image 9">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="2">
                 <a href="assets/images/blog/blog_10.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_10.jpg" alt="Image 10">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="2">
                 <a href="assets/images/blog/blog_11.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_11.jpg" alt="Image 11">
                 </a>
             </div>
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 mb-4 gallery-item" data-page="2">
                 <a href="assets/images/blog/blog_12.jpg" data-lightbox="gallery-group">
                     <img class="p-2 bg-white shadow-md" src="assets/images/blog/blog_12.jpg" alt="Image 12">
                 </a>
             </div>
         </div>
+        <nav class="d-flex justify-content-center mt-4 mb-4" aria-label="Gallery pagination">
+            <ul class="pagination pagination-lg mb-0" id="gallery-pagination"></ul>
+        </nav>
     </div>
 </div>
 
@@ -293,9 +296,41 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
     <script src="assets/js/script.js"></script>
     <script>
-        // Enable navigation arrows and seamless looping between all gallery images
-        // Wait for DOM to be ready
+        // Gallery pagination: 4 rows (12 images) per page
         $(document).ready(function() {
+            var itemsPerPage = 12;
+            var $items = $('.gallery-item');
+            var totalPages = Math.ceil($items.length / itemsPerPage);
+
+            function goToPage(page) {
+                page = Math.max(1, Math.min(page, totalPages));
+                $items.addClass('d-none');
+                $items.filter('[data-page="' + page + '"]').removeClass('d-none');
+                $('#gallery-pagination .page-link').parent().removeClass('active');
+                $('#gallery-pagination .page-link[data-page="' + page + '"]').parent().addClass('active');
+            }
+
+            var $nav = $('#gallery-pagination');
+            $nav.empty();
+            if (totalPages > 1) {
+                $nav.append('<li class="page-item"><a class="page-link" href="#" data-page="prev" aria-label="Previous"><span aria-hidden="true">&laquo;</span></a></li>');
+                for (var p = 1; p <= totalPages; p++) {
+                    $nav.append('<li class="page-item' + (p === 1 ? ' active' : '') + '"><a class="page-link" href="#" data-page="' + p + '">' + p + '</a></li>');
+                }
+                $nav.append('<li class="page-item"><a class="page-link" href="#" data-page="next" aria-label="Next"><span aria-hidden="true">&raquo;</span></a></li>');
+                $nav.on('click', '.page-link', function(e) {
+                    e.preventDefault();
+                    var current = parseInt($('#gallery-pagination .page-item.active .page-link').data('page'), 10);
+                    if (isNaN(current)) current = 1;
+                    var target = $(this).data('page');
+                    if (target === 'prev') goToPage(current - 1);
+                    else if (target === 'next') goToPage(current + 1);
+                    else goToPage(target);
+                });
+            }
+            goToPage(1);
+
+            // Lightbox options
             if (typeof lightbox !== 'undefined') {
                 lightbox.option({
                     'resizeDuration': 200,
@@ -310,5 +345,5 @@
     </script>
 
 
-<!-- Mirrored from rtcug.org/gallery by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 29 Jan 2026 13:13:43 GMT -->
+
 </html>
